@@ -1,5 +1,5 @@
 AUX 50pymacs-gentoo.el 221 RMD160 7589f30b2a8fc4966cbbfd7b19c75030c51a4adc SHA1 2ce1f3f25bd55ebfcb4e90507121fc0c067ea266 SHA256 2fab27bb03386518debc9ff98e7f777e090b7cb3c3f38c390df9d6bf44d7580f
 DIST Pymacs-0.23.tar.gz 92161 RMD160 6afa2577917fa3387401ee28360224eb89d3bb3c SHA1 1293b69db60726bb6a5cfaddd627a11650c39c54 SHA256 eb419e307c9670ac5ad76de44c8803bd91ff0a1a8d6b6035fa4d0427a85f5163
-EBUILD pymacs-0.23.ebuild 1245 RMD160 c219b28f45758532bf99c995531c518aa2b354b0 SHA1 3c71a7e82a33568c76b3781a251c3031d66f9c9a SHA256 b1106ff8b91e2890d697c46ebc278ecf39e27a317f988834a124626a56ee6034
-MISC ChangeLog 5253 RMD160 b01678001a111419b51337799aaf172e38c2d19b SHA1 3dc1d6185ae52a4ff35c315cee206152f110f578 SHA256 8e28de98fe3f41f99fdeda9b3aa96b02a4ced546525b0a6555dc89d51c1233e5
+EBUILD pymacs-0.23.ebuild 1227 RMD160 9a47dc7b3de7be23db50a2076fd22e8f8527cf28 SHA1 27bdd73af5e39a86824dcecaad1195905ad0a86d SHA256 b536718823cd342e1dc52d8d75d03961d4ebb995452934d5cabcc37b4c5146d5
+MISC ChangeLog 5374 RMD160 c5a0d71c84f74dfb41170722d9a0d1e9cb9117ef SHA1 7decb8b5920a3634739085a3a0dfa652b22c841f SHA256 5e080a6b236c6c758e90288dae814c180ac0647005c7ccecba49459f9a2e8867
 MISC metadata.xml 178 RMD160 c8e2a6491866d13b6e6deeaa958d2d72a02d8063 SHA1 4df7a5da01b67b8ee07b0449a2b23ab5065fc28c SHA256 daafd22b77c8b0fd1457997b066b4915417db72b755712b4a3e65d3c91b884e3
